--- a/main.html
+++ b/main.html
@@ -9,6 +9,52 @@
 </head>
 <body>
     <!-- add table here -->
+	<table class="table">
+		<thead>
+		<tr>
+			<th>Name</th>
+			<th>Kills</th>
+			<th>Saved</th>
+			<th>Deaths</th>
+			<th>Reveives</th>
+			<th>Win</th>
+		</tr>
+			</thead>
+		<tbody>
+		<tr>
+			<td>Hackerman</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+		</tr>
+		<tr>
+			<td>Hackerman</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+		</tr>
+					<tr>
+			<td>Hackerman</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+		</tr>
+		<tr>
+			<td>Hackerman</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+			<td>10</td>
+		</tr>
+			</tbody>
+	</table>
 
         
 </body>
